<resources>
    <string name="app_name">Kosmosinn_Mobile</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="Logout">Logout</string>
    <string name="back">Til baka</string>
    <string name="header_title">KOSMÓSINN</string>
    <string name="header_caption">Spjallborð alþýðunnar</string>
    <string name="home">Heim</string>
    <string name="userComments">Comments by User</string>
    <string name="userTopics">Topics by User</string>
    <string name="addboard">Add Board</string>
    <string name="addtopic">Add Topic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addcomment">Add Comment</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="searchuser">Search for User</string>
    <string name="searchtopic">Search for Topic</string>
</resources>